--- a/sugarcrm/styleguide/less/sugar-specific/icons.less
+++ b/sugarcrm/styleguide/less/sugar-specific/icons.less
@@ -26,9 +26,6 @@ a.active [class^="icon-"] {
   color: @white;
 }
 
-table [class^="icon-favorite"] {
-  margin-left: 18px;
-}
 
 .icon-favorite:before {
   content: "\f005";
@@ -45,24 +42,6 @@ table [class^="icon-favorite"] {
 .btn:hover .icon-favorite.active {
   color: @yellow_favorite !important;
 }
-
-//nutmeg star
-table [class^="icon-star"] {
-  margin: 0 16px
-}
-
-table .icon-star, 
-.subnav .icon-star {
-  color: @grayLight;
-}
-table .active .icon-star, 
-.subnav .active .icon-star  {
-  color: @orange;
-}
-/*
-.active .icon-ban-circle, .active .icon-exclamation-sign {
-color: @red;
-} */
 
 .the-icons {
   margin-left: 0;
