--- a/sugarcrm/styleguide/less/sugar-specific/tables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/tables.less
@@ -1,4 +1,5 @@
 /* sugar mods */
+/*legacy?*/
 div.inline-edit {
   padding: 4px;
   position: relative;
@@ -83,93 +84,4 @@ div.sugareditable {
   position: absolute;
   top: 1px;
   width: 80% !important;
-}
-
-/* Tables
------------------*/
-table {
-  margin: 0;
-  tbody {
-    tr:last-child {
-      td:last-child,
-      td:first-child,
-      td:last-child,
-      td:first-child {
-        .border-radius(0 0 4px 4px)
-      }
-    }
-  }
-  th,
-  td {
-    position: relative;
-  }
-  th:last-child {
-    border-right: 0;
-  }
-  th {
-    white-space: nowrap;
-    line-height: 26px !important;
-    min-width: 20px;
-    color: @tableHeader;
-    border-right: 1px solid @grayLighter;
-    .btn-group {
-      margin: 0 0 0 -8px;
-      width: 60px;
-    }
-    .btn input {
-      margin: -2px 0 0 0;
-    }
-    .toggle-all {
-      margin: 10px;
-    }
-    &.nosort.select-all {
-      padding: 0;
-      .btn-group {
-        position: absolute;
-        top: 0;
-        //centering checkbox in btn-group
-        > .btn:first-child {
-          padding-top: 7px;
-          padding-bottom: 1px;
-        }
-      }
-    }
-  }
-  td {
-    overflow: visible !important;
-    white-space: normal;
-    word-break: break-word;
-    white-space: nowrap;
-    overflow-x: hidden;
-    &:last-child {
-      overflow-x: visible;
-    }
-    .btn-toolbar {
-      margin: -5px 0 -10px;
-    }
-    div {
-      word-break: break-word;
-    }
-    .actions {
-      //position: absolute;
-      //top: 8px;
-      //right: 8px;
-      a:hover {
-        color: @grayDark;
-      }
-    }
-  }
-  tfoot {
-    th {
-      white-space: normal;
-      word-break: break-word;
-    }
-    td {
-      font-weight: bold;
-      border-top: 2px solid @grayLight !important;
-    }
-  }
-  input {
-    position: relative;
-  }
 }
